compiler/testData/asJava/lightClasses/compilationErrors/ActualTypeAliasCustomJvmPackageName.kt
// a.b.c.ActualTypeAliasCustomJvmPackageNameKt
// IGNORE_BACKEND: ANY
@file:JvmPackageName("a.b.c")
package p

actual typealias B = List<Int>